ActivityHistory: Use a Deque for the actual history.